# libkdcraw

./: .gitlab-ci.yml  .krazy  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Messages.sh  NEWS  README  TODO  configure.in.bot  configure.in.in  dcrawbinary.cpp  dcrawbinary.h  dcrawiface.cpp  dcrawiface.h  dcrawinfocontainer.h  dcrawsettingswidget.cpp  dcrawsettingswidget.h  kdcraw.cpp  kdcraw.h  libkdcraw.kdevelop  libkdcraw.lsm  libkdcraw.lsm.cmake  libkdcraw.pc.cmake  libkdcraw.pc.in  libkdcraw_export.h  metainfo.yaml  rawdecodingsettings.h  rawfiles.h  version.h
cmake/modules/: FindKdcraw.cmake  FindLibRaw.cmake
cmake/templates/: KDcrawConfig.cmake.in  KF5KDcrawConfig.cmake.in  KF6KDcrawConfig.cmake.in  libkdcraw-config.cmake.in  libkdcraw.pc.cmake
data/: CMakeLists.txt
data/icons/: CMakeLists.txt
dcraw/: CAMERALIST  CMakeLists.txt  Makefile.am  README  cameralist  dcraw.c  kdcraw.1
icons/: CMakeLists.txt  Makefile.am
libkdcraw/: CAMERALIST  CMakeLists.txt  Doxyfile  Makefile.am  dcrawbinary.cpp  dcrawbinary.h  dcrawinfo.h  dcrawinfo.h.cmake  dcrawinfocontainer.cpp  dcrawinfocontainer.h  dcrawsettingswidget.cpp  dcrawsettingswidget.h  kdcraw.cpp  kdcraw.h  kdcraw_p.cpp  kdcraw_p.h  kdcrawprivate.cpp  kdcrawprivate.h  libkdcraw_export.h  libraw_config.h.cmake  ractionthreadbase.cpp  ractionthreadbase.h  ractionthreadbase_p.cpp  ractionthreadbase_p.h  rawdecodingsettings.cpp  rawdecodingsettings.h  rawfiles.h  rcombobox.cpp  rcombobox.h  rexpanderbox.cpp  rexpanderbox.h  rnuminput.cpp  rnuminput.h  settings.patch  squeezedcombobox.cpp  squeezedcombobox.h  version.cmake.cmake  version.h  version.h.cmake  version.h.cmake.in
libraw/: CMakeLists.txt  Changelog.txt  Makefile.am  RawSpeed.note.txt
libraw/RawSpeed/: ArwDecoder.cpp  BitPumpJPEG.cpp  BitPumpJPEG.h  BitPumpMSB.cpp  BitPumpMSB.h  BitPumpMSB32.h  BitPumpPlain.cpp  BitPumpPlain.h  ByteStream.cpp  Camera.h  CameraMetaData.cpp  CameraMetaData.h  CameraMetadataException.h  Common.h  DngDecoder.cpp  DngDecoderSlices.cpp  DngOpcodes.cpp  DngOpcodes.h  FileMap.cpp  FileMap.h  FileReader.h  LJpegDecompressor.cpp  LJpegPlain.cpp  NefDecoder.cpp  NikonDecompressor.cpp  OrfDecoder.cpp  PefDecoder.cpp  RawDecoder.cpp  RawDecoder.h  RawImage.cpp  RawImage.h  RawImageDataFloat.cpp  RawImageDataU16.cpp  RawParser.h  Rw2Decoder.cpp  SrwDecoder.cpp  TiffParser.cpp  dlldef.h  rawspeed_xmldata.cpp
libraw/demosaic-pack-GPL2/: afd_interpolate_pl.c  ahd_interpolate_mod.c  ahd_partial_interpolate.c
libraw/demosaic-pack-GPL3/: expo_before.c  green_equi.c  shrtdct_float.c
libraw/internal/: dcb_demosaicing.c  dcraw_common.cpp  dcraw_fileio.cpp  defines.h  foveon.cpp  libraw_internal_funcs.h  var_defines.h  wf_filtering.cpp
libraw/libraw/: libraw.h  libraw_alloc.h  libraw_config.h.cmake  libraw_const.h  libraw_datastream.h  libraw_internal.h  libraw_types.h  libraw_version.h  librawwindows.h
libraw/samples/: 4channels.cpp  dcraw_emu.cpp  dcraw_half.c  half_mt.c  half_mt_win32.c  identify.cpp  mem_image.cpp  simple_dcraw.cpp  unprocessed_raw.cpp
libraw/src/: libraw_c_api.cpp  libraw_cxx.cpp  libraw_datastream.cpp
orig/: CMakeLists.txt  NEWS  libkdcraw.pc.cmake
profiles/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.am  dcrawbinary.cpp  dcrawbinary.h  dcrawinfocontainer.cpp  dcrawinfocontainer.h  dcrawsettingswidget.cpp  dcrawsettingswidget.h  enhancedjob.cpp  enhancedjob.h  jobcollectionz.cpp  jobcollectionz.h  kdcraw.cpp  kdcraw.h  kdcraw_p.cpp  kdcraw_p.h  libkdcraw_debug.cpp  libkdcraw_debug.h  ractionjob.cpp  ractionjob.h  ractionthreadbase.cpp  ractionthreadbase.h  ractionthreadbase_p.cpp  ractionthreadbase_p.h  rawdecodingsettings.cpp  rawdecodingsettings.h  rawfiles.h  rcombobox.cpp  rcombobox.h  rexpanderbox.cpp  rexpanderbox.h  rnuminput.cpp  rnuminput.h  rsliderspinbox.cpp  rsliderspinbox.h  rwidgetutils.cpp  rwidgetutils.h  squeezedcombobox.cpp  squeezedcombobox.h  version.h
test/: CMakeLists.txt  Makefile.am  libinfo.cpp  raw2png.cpp
tests/: CMakeLists.txt  libinfo.cpp  raw2png.cpp
tests/multithreading/: CMakeLists.txt  actionthread.cpp  actionthread.h  main.cpp  processordlg.cpp  processordlg.h
